--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
 }
 body #container {
   display: flex;
