--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	min-height: 100vh;
 
 	#container {
 		display: flex;
